--- a/conf/settings.sh.dist
+++ b/conf/settings.sh.dist
@@ -23,16 +23,21 @@ dc_remote_username=admin
 dc_remote_password=deluge
 #The deluge state directory so we can get the torrent file and enable fast resume prior to sending it to rtorrent. We avoid an unnecessary hash check that way.
 deluge_state_dir=$home/.config/deluge/state
+#Torrents from these trackers aren't kept in the deluge queue. Have in mind that partial matches may be possible so try to keep the tracker codes as distinct as possible.
+deluge_queue_skip_tracker_codes="mysite|ipt"
 #This is a default string that's added in the rtorrent label for combinations of torrent sites that cannot be mapped to an internal code
 label_not_found_string=404
 #Where do we save the logs of the movement
 logdir=$home/logs/move_to_rtorrent
+#The minimum ratio for local and remote operations to be effective. If any of those 2 is less than the treshold then we enter a sleep loop for up to $step_sleep multiplied by $run_count_max seconds.
+min_ratio_move_local=1
+min_ratio_move_remote=1
 #If num_torrents_queue_max is greater than 0 then we keep up to $num_torrents_queue_max torrents active in deluge. If the number of running torrents in deluge is above $num_torrents_queue_max then we send some of them to rtorrent
 num_torrents_queue_max=0
 #The paths here are only used to assign a (composite) label to a torrent, like movies, series, pr0n, etc
 #The paths must be absolute. For a value of path1="/a/b/c|abc" and tracker1_code=bla the resulting label, depending if deluge ratio >= $min_ratio_move_local, would be BLA_ABC_SHORT (or LONG if deluge ratio < $min_ratio_move_local
 #If the torrent download path doesn't match any of the below criteria, a default label of DEFAULT_404_SHORT (or LONG) is assigned.
-#The pair path|label should have double quotes. The folder path should NOT have a trailing slash. If any of these don't exist the script WILL NOT WORK!
+#The pair path|label should have double quotes. The folder path should NOT have a trailing slash. Make sure the quotes and the | are present, scripts expects them.
 path1="/home/transmission/Filme/Filme_HD|FILME_HD"
 path2="/home/transmission/Seriale/Seriale_HD|SERIALE_HD"
 path3="/home/transmission/XXX|XXX"
@@ -47,8 +52,12 @@ step_sleep=600
 rtxmlrpc_bin=$bindir/rtxmlrpc
 #Path to rtxmlrpc socket
 rtxmlrpc_socket=/run/rtorrent/rtorrent.sock
+#Which ratio to send to deluge. Options are: local ratio, remote ratio, average between local and remote ratio,sum of local and remote ratio. Keywords are localratio,remoteratio,avgratio,sumratio.
+#Format is trackerX_deluge_ratio=value
+tracker1_deluge_ratio=remoteratio
+tracker2_deluge_ratio=sumratio
 #We use tracker*_url_contains to map a tracker to an easy-to-read code. The script uses these partial URLs to map an announce URL to a tracker code.
-#These fields can also be blank and default values are assigned (tracker_code will be DEFAULT for any unlisted URLs). Have in mind some sites have multiple URLs defined and all the partial values will need to be added in the list.
+#These fields can also be blank and default values are assigned (tracker_code will be DEFAULT for any unlisted URLs). Have in mind some sites have multiple announce URLs defined and all the partial values will need to be added in the list.
 tracker1_url_contains="*host.name*"
 tracker2_url_contains="*empirehost.me*|*stackoverflow.tech*|*bgp.technology*"
 tracker3_url_contains="*cartoonchaos.org*"
@@ -71,21 +80,12 @@ tracker2_reannounce_url=
 ###############################################################
 ## Do not change these unless you know what you are doing    ##
 ###############################################################
-#Which ratio to send to deluge. Options are: local ratio, remote ratio, average between local and remote ratio,sum of local and remote ratio. Keywords are localratio,remoteratio,avgratio,sumratio.
-#Format is trackerX_deluge_ratio=value
-tracker1_deluge_ratio=remoteratio
-tracker2_deluge_ratio=sumratio
-#Torrents from these trackers aren't kept in the deluge queue. Have in mind that partial matches may be possible so try to keep the tracker codes as distinct as possible.
-deluge_queue_skip_tracker_codes="mysite|ipt"
 #Settings this to 1 enables timeout to external commands like dc_local_bin, dc_remote_bin and rtxmlrpc_bin
 enable_external_command_timeout=0
 #This is the maximum time (in seconds) we need to wait before killing a command and exiting with an error message
 #This was implemented because various commands (like deluge-console) like to hang indefinitely, especially on protocol mismatch
 #For now there's a hardcoded list of commands where this is used: dc_local_bin,dc_remote_bin and rtxmlrpc_bin
 external_command_timeout=60
-#The minimum ratio for local and remote operations to be effective. If any of those 2 is less than the treshold then we enter a sleep loop for up to $step_sleep multiplied by $run_count_max seconds.
-min_ratio_move_local=1
-min_ratio_move_remote=1
 run_count=1
 run_count_max=48
 repair_run_count=1
