Added deluge_queue_run_count and deluge_queue_run_count_max to be used in deluge queue loop.

--- a/conf/settings.sh.dist
+++ b/conf/settings.sh.dist
@@ -92,6 +92,8 @@ enable_external_command_timeout=0
 external_command_timeout=60
 run_count=1
 run_count_max=48
+deluge_queue_run_count=1
+deluge_queue_run_count_max=48
 repair_run_count=1
 repair_run_count_max=8
 torrentid=$1
